# equeue

./: CMakeLists.txt  changelog  ctl  equeue.3.man  readme
debian/: control
include/: CMakeLists.txt
include/equeue/: _rqueue.h  _types.h  equeue.h
src/: CMakeLists.txt
src/imp/: endpoint-test.c  equeue_test.c  rqueue_test.c
src/lib/: equeue.c  rqueue.c  types.c
